cloudmon/kustomize/grafana/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
